# llvm-codegen-benchmark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vectorize.cpp
.github/workflows/: llvm-ci.yml  pre-commit.yml
dataset/: 0000966eff10b4fb.ll  00019b75c962a2af.ll  000253e8119ebc51.ll  0002763c031d588f.ll  000297d90408e897.ll  0002aef62e29fe7a.ll  0002ccdf5e758f9a.ll  0002f9e282fdd8ec.ll  00033f8e54edb98c.ll  0003f4a8bebf21b5.ll  0004001e4041f827.ll  0005700e8c5620e4.ll  0005cef46ad48fd3.ll  0005ed0cacba715e.ll  0006922dc7ab237c.ll  0006f87df205d8c1.ll  0006f9f1b04db9ea.ll  000733c97ec7cd97.ll  000752ce4e45c85f.ll  0007688c63cbacab.ll  0007ec24ca05058d.ll  00083448bfd1ecfe.ll  0008827586664d8c.ll  0008b423783935ce.ll  0008ea66ae563e19.ll  000963f9a23c7c90.ll  0009a11b66ed250b.ll  0009f6c39594d137.ll  000a1d774f804ad5.ll  000a2a66e83ba25f.ll  000a4d1943ca1c13.ll  000a50b1cdb2655b.ll  000a7c9d9f0cccb6.ll  000a96d8878827e7.ll  000a997e4cf32ed3.ll  000b2ec0bddcf9e8.ll  000b3bc82a6b3f0e.ll  000b62478e5a1530.ll  000c2968d71af700.ll  000c597f917e50ea.ll  (+199351 more)
result/arm64/: 0000966eff10b4fb.S  000253e8119ebc51.S  0002aef62e29fe7a.S  0002ccdf5e758f9a.S  0002f9e282fdd8ec.S  0004001e4041f827.S  0005700e8c5620e4.S  0006922dc7ab237c.S  0006f87df205d8c1.S  000733c97ec7cd97.S  000752ce4e45c85f.S  0007688c63cbacab.S  0007ec24ca05058d.S  00083448bfd1ecfe.S  0008c475598a7902.S  0008ea66ae563e19.S  0009a11b66ed250b.S  000a1d774f804ad5.S  000a2a66e83ba25f.S  (+114838 more)
scripts/: filter_pr_changes.py  gen_optimized.py  setup_pre_commit_patch.sh  update_optimized.sh
(+698414 files in other folders)
